2006-05-10  Frank Lichtenheld  <djpig@debian.org>

	* scripts/changelog/debian.pl: Use same regex for
	distribution names as for packages. Since the policy
	doesn't define these names very strict, we should give
	the user more freedom here though all official names
	are matched by a way stricter regex. (Characters now
	allowed are '+' and '.').

2006-05-10  Robert Millan  <rmh@aybabtu.com>,
	    Frank Lichtenheld  <djpig@debian.org>

	* scripts/dpkg-source.pl: When checking the
	signature of a .dsc file, use the Debian
	keyring if available.

2006-05-04  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.13.20~.

2006-05-04  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.13.19.

2006-05-04  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-genchanges.pl: Do not use $version to refer to the
	source package version, as it denotes the dpkg version.

2006-05-04  Nicolas François  <nicolas.francois@centraliens.net>,
	    Guillem Jover  <guillem@debian.org>

	* scripts/install-info.pl: Use the numerical value of $! instead of
	the string when checking if the locking error was due to an already
	existing file, which is locale dependent, and die accordingly.

2006-05-04  Nicolas François  <nicolas.francois@centraliens.net>

	* scripts/install-info.pl: Add a new line after adding the last
	entry at the end of the dir file, which makes the info readers
	able to see those last entries.

2006-05-04  Wayne Davison <wayned@users.sourceforge.net>,
            Guillem Jover  <guillem@debian.org>

	* scripts/install-info.pl: Make '--dir-file' option compatible
	with GNU install-info by renaming the infodir variable to dirfile
	and not appending the '/dir' string except when initializing from
	'--info-dir' or '--infodir'.

2006-05-04  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-gencontrol.pl: Use the source:Version substvar when
	setting the Source field version, in case the binary package