@@ -9,6 +9,9 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
     Closes: #361171
   * Use the Debian keyring in dpkg-source when checking signatures
     of .dsc files, if available. Closes: #364726
+  * Let dpkg-buildpackage pass through all remotely sensible
+    -sX options to dpkg-source (-s[nsAkurKUR] currently).
+    Closes: #36586
 
   [ Updated dpkg Translations ]
   * Portuguese (Miguel Figueiredo).
