@@ -1,5 +1,9 @@
 2006-05-10  Frank Lichtenheld  <djpig@debian.org>
 
+	* scripts/dpkg-buildpackage.sh: Pass all
+	remotely sensible -sX option through to
+	dpkg-source (-s[nsAkurKUR]).
+
 	* scripts/changelog/debian.pl: Use same regex for
 	distribution names as for packages. Since the policy
 	doesn't define these names very strict, we should give
